--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text to Speech Converter</title>
     <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap">
     <!-- CSS Styling -->
     <style>
@@ -31,6 +34,11 @@
             margin-bottom: 20px;
             font-weight: 700;
             color: #4a90e2;
+        }
+         h3{
+            font-family: "Kanit", sans-serif;
+            font-weight: 600;
+            font-style: normal;
         }
         form {
             display: flex;
@@ -65,6 +73,7 @@
 </head>
 <body>
     <div class="container">
+        <h3>Team-02</h3>
         <h1>Text to Speech Converter</h1>
         <form action="/" method="post" enctype="multipart/form-data">
             <label for="text">Enter text:</label>
